--- a/layouts/_page.scss
+++ b/layouts/_page.scss
@@ -3,10 +3,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   margin-bottom: 12rem;
   &__heading {
     font-size: $size-typo-heading-page;
     margin-top: 5rem;
     margin-bottom: 2rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
   }
 }
