--- a/main.css
+++ b/main.css
@@ -4,6 +4,10 @@ body {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: "montserrat", sans-serif;
 }
@@ -363,6 +367,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
   margin-bottom: 12rem;
 }
 
@@ -370,6 +375,8 @@ body {
   font-size: 2.5rem;
   margin-top: 5rem;
   margin-bottom: 2rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 .menu {
